wc2 oef 1 tot en met 4 verbeterd

--- a/wc2/index.html
+++ b/wc2/index.html
@@ -22,11 +22,13 @@
         <input type="text" name="degree" id="degree">
         <input type="submit" id="button" value="create student">
     
-   <!--
-    <script src="/wc2/script.js"></script>
-    <script src="/wc2/oef5.js"></script>
-    <script src="/wc2/oef6.js"></script>-->
-    <script src="/wc2/oef7.js"></script>
+        <script src="/wc2/script3.js"></script>
+    
+ <!--
+    <script src="/wc2/script1.js"></script>
+    <script src="/wc2/script2.js"></script>
+
+    <script src="/wc2/oef7.js"></script>-->
 
 
 </body>
