--- a/wc4B/index.html
+++ b/wc4B/index.html
@@ -7,7 +7,13 @@
     <title>Werkcollege 4B</title>
 </head>
 <body>
-    
+    <h1>Find your movie</h1>
+    <input type="text" name="search" id="search">
+    <input type="button" value="Search" id="button">
+
+    <div id="div">
+        
+    </div>
 
     <script src="script.js"></script>
 </body>
